# maxgcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
maxgcp/: __init__.py  estimators.py  loss_functions.py  summary.py
maxgcp/tests/: test_loss_functions.py  test_maxgcp.py
mge/: __init__.py  estimators.py  loss_functions.py
src/maxgcp/: __init__.py  _version.py  cli.py  estimators.py  summary.py
src/maxgcp/cli/: compare.py  ldsc.py  main.py  utils.py
