[project]
name = "maxgcp"
version = "0.0.1"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    {name = "Michael Zietz", email = "michael.zietz@gmail.com"}
]

dependencies = ["numpy", "pandas"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["maxgcp"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = ["--import-mode=importlib",]
