[project]
name = "maxgcp"
version = "0.1.1"
description = "Optimized phenotype definitions boost GWAS power"
authors = [
    {name = "zietzm", email = "michael.zietz@gmail.com"}
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Repository = "https://github.com/tatonetti-lab/maxgcp"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["maxgcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
dev-dependencies = [
    "pytest>=8.1.2",
]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = ["--import-mode=importlib",]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/maxgcp"]
