[project]
name = "maxgcp"
version = "0.1.2"
description = "Optimized phenotype definitions boost GWAS power"
authors = [
    {name = "zietzm", email = "michael.zietz@gmail.com"}
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "scipy>=1.13.0",
    "typer>=0.12.4",
    "rich>=13.7.1",
    "polars>=1.5.0",
    "ldsc",
    "igwas",
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Repository = "https://github.com/tatonetti-lab/maxgcp"

[project.scripts]
maxgcp = "maxgcp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/maxgcp"]

[tool.uv.sources]
ldsc = { git = "https://github.com/zietzm/ldsc", branch = "py3" }
igwas = { git = "https://github.com/tatonetti-lab/indirect-gwas" }
